src/compiler/example/error/github/raw.githubusercontent.com/wcpro/Scaffeine/89f58fd51097a098c1dacce13400df5091de006f/src/Scaffeine.Notifications/content/Models/UserNotification.cs.pp
using $rootnamespace$.Core.Model;

namespace $rootnamespace$.Models
{
    public partial class UserNotification : INotification
    {
        private readonly User _user;
        private readonly string _message;

        public UserNotification(User user, string message)
        {
            _user = user;
            _message = message;
        }

        public string Message { get { return _message; } }
        public User User { get { return _user; } }
    }
}